# TRADE

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/tradebot/: __init__.py
tests/: test_broker.py  test_indicators.py  test_orders.py  test_risk.py  test_schedule.py  test_strategy.py
tradebot/: __init__.py  broker.py  config.py  database.py  engine.py  indicators.py  main.py  market_data.py  orders.py  risk.py  scanner.py  strategy.py  telegram.py
