[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebot"
version = "0.1.0"
description = "IBKR TWS automated paper trading bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ib_async>=2.1,<3",
  "pandas>=2.2,<3",
  "numpy>=2.0,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
