[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebot"
version = "0.2.0"
description = "IBKR TWS automated paper trading bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ib-insync>=0.9.86,<1",
  "pandas>=2.2,<4",
  "numpy>=1.26,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tradebot*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
